update README and REPORT